--- a/components/yeelight_remote/test.yaml
+++ b/components/yeelight_remote/test.yaml
@@ -5,7 +5,7 @@ esp8266:
   board: esp_wroom_02
   framework:
     version: 2.7.4
-  esp8266_restore_from_flash: true
+  restore_from_flash: true
 
 preferences:
   flash_write_interval: 1min
